# physical-ai-hackathon

./: .gitignore  .gitmodules  README.md  camera_preview.py  cosmos_policy_client.py  deploy_cosmos_omx.py  get_serial.py  main.py  pyproject.toml
hackathon/: __init__.py  dataset.py  dataset_test.py  multiview_cosmos.py  sampler.py  test_dataloader.py  test_generation.py  train_multiview.py  video_finetune_dataset.py
