[project]
name = "physical-ai-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lerobot[dynamixel]>=0.4.3",
    "mimic-video>=0.0.47",
    "numpy>=2.4.2",
    "pytest>=9.0.2",
    # Training dependencies
    "accelerate>=1.0.0",
    "peft>=0.10.0",
    "tensorboard>=2.15.0",
    "imageio[pyav]>=2.34.0",  # For video saving
]
